--- a/index (1).html
+++ b/index (1).html
@@ -365,6 +365,7 @@
             <p>Subscribe For Latest Updates</p>
             <input type="email" placeholder="Your Email" class="email">
             <input type="submit" value="Subscribe" class="btn">
+            <button onclick="redirectToWebXRPage()">Go to WebXR Page</button>
            
         </div>
 
@@ -393,5 +394,13 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="js/script.js"></script>
+       
+    <script>
+        function redirectToWebXRPage() {
+            // Redirect to your WebXR page on GitHub
+            window.location.href = 'https://umagayathri-25.github.io/web-xr';
+        }
+    </script>
+
 </body>
 </html>
