--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <!-- ... (previous HTML code) -->
 
 <!-- Add a button to navigate to the WebXR page with a specific image name -->
-<button onclick="redirectToWebXRPage('image1.jpg')" class="btn">Explore Image 1 in AR</button>
+<button onclick="redirectToWebXRPage('headset.jpg')" class="btn">Explore Image 1 in AR</button>
 <button onclick="redirectToWebXRPage('image2.jpg')" class="btn">Explore Image 2 in AR</button>
 <button onclick="redirectToWebXRPage('image3.jpg')" class="btn">Explore Image 3 in AR</button>
 
