--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
 
 <!-- Add a button to navigate to the WebXR page with a specific image name -->
 <button onclick="redirectToWebXRPage('headset.jpg')" class="btn">Explore Image 1 in AR</button>
-<button onclick="redirectToWebXRPage('image2.jpg')" class="btn">Explore Image 2 in AR</button>
-<button onclick="redirectToWebXRPage('image3.jpg')" class="btn">Explore Image 3 in AR</button>
+<button onclick="redirectToWebXRPage('sponza.jpg')" class="btn">Explore Image 2 in AR</button>
+<button onclick="redirectToWebXRPage('space.jpg')" class="btn">Explore Image 3 in AR</button>
 
 <script>
     function redirectToWebXRPage(imageName) {
