--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 <script>
     function redirectToWebXRPage(imageName) {
         // Redirect to your WebXR page with the specified image name as a query parameter
-        window.location.href = 'https://umagayathri-25.github.io/web-xr//?image=' + encodeURIComponent(imageName);
+        window.location.href = 'https://umagayathri-25.github.io/web-xr/?image=' + encodeURIComponent(imageName);
     }
 </script>
 
