--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     <div class=" swiper product-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide box" id="item1">
-                <img src="images/table2.jpg" >
-                <h1 class="title">Table</h1>
+                <img src="images/headset.png" >
+                <h1 class="title">Headset</h1>
                 <div>
                     <label>SIZE:</label>
                     <select>
@@ -216,7 +216,8 @@
                     <i class="fa fa-star-half"></i>
                 </div>
                 <button onclick="addToCart(item2)" class="addcart" id="addtocart">Add To Cart</button>
-                <button class="camera" id="camera"><i class="fa fa-camera"></i></button>
+                <img src="images/<button onclick="redirectToWebXRPage('sponza.jpg')" class="btn">Explore Image 2 in AR</button>.jpg" >
+              
             </div>
 
             <div class="swiper-slide box" id="item3">
